# event-recording

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.gpu  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
configs/: train.yaml
configs/domains/: cricket.yaml  soccer.yaml  warehouse.yaml
data/: eval_results.json
data/detections/: gaikwad_last10min_detections.json  🎆 Moeen & Bairstow Fireworks With The Bat IN FULL ｜ England v South Africa_part018_detections.json  🎆 Moeen & Bairstow Fireworks With The Bat IN FULL ｜ England v South Africa_part019_detections.json
data/detections/full_video/: gaikwad_century_detections.json
data/detections/last10min/: gaikwad_last10min_detections.json
data/labels/: Ist ODI ｜ Ind Vs Aus 2023 ｜ Highlights ｜ Mohali.json  Ugraretas Tournament -  Season 7 FINAL - PRG Royal Stag VS The Baggy Blues - FULL MATCH video.json  gaikwad_century.json  🎆 Moeen & Bairstow Fireworks With The Bat IN FULL ｜ England v South Africa_part018.json
data/test_detection/: gaikwad_century_detections.json
infrastructure/localstack/: init-buckets.sh
infrastructure/terraform/environments/dev/: main.tf
infrastructure/terraform/environments/minimal/: main.tf
infrastructure/terraform/modules/ec2-gpu/: main.tf
infrastructure/terraform/modules/ecs/: main.tf
infrastructure/terraform/modules/lambda-orchestrator/: main.tf
infrastructure/terraform/modules/rds/: main.tf
infrastructure/terraform/modules/s3/: main.tf
infrastructure/terraform/modules/vpc/: main.tf
scripts/: detect.py  evaluate.py  label.py  train.py
src/aws/: __init__.py  config.py  gpu_orchestrator.py  job_runner.py  sagemaker.py
src/core/: __init__.py  base_dataset.py  base_detector.py  domain.py
src/data/: dataset.py  labeler.py  ui_theme.py
src/db/: __init__.py  config.py  models.py  repository.py
src/db/migrations/: env.py
src/db/migrations/versions/: 001_initial_schema.py
src/domains/: __init__.py
src/domains/cricket/: __init__.py  dataset.py  detector.py  domain.py
src/domains/soccer/: __init__.py  dataset.py  detector.py  domain.py
src/domains/warehouse/: __init__.py  dataset.py  detector.py  domain.py
src/inference/: __init__.py  cloud_predictor.py  onnx_export.py  onnx_predictor.py  predictor.py
src/models/: detector.py
src/storage/: __init__.py  base.py  local.py  s3.py
src/training/: __init__.py  cloud_trainer.py  trainer.py
src/utils/: video.py
